# djcontrolmp3le_usb_proxy

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
docs/plans/: 2025-11-17-esp32p4-usb-midi-proxy-design.md  2025-11-17-implementation-tasks.md
esp32_p4_midi_proxy/: ARCHITECTURE.md  CMakeLists.txt  README.md  sdkconfig.defaults
esp32_p4_midi_proxy/components/midi_types/: CMakeLists.txt  midi_types.c
esp32_p4_midi_proxy/components/midi_types/include/: midi_types.h
esp32_p4_midi_proxy/main/: CMakeLists.txt  buffers.c  buffers.h  cdc_console.c  cdc_console.h  config.h  hercules_protocol.c  hercules_protocol.h  idf_component.yml  main.c  midi_converter.c  midi_converter.h  midi_task.c  midi_task.h  tusb_config.h  usb_descriptors.c  usb_device.c  usb_device.h  usb_host.c  usb_host.h
